--- a/02_03_xml_html_js/MVP/src/index.html
+++ b/02_03_xml_html_js/MVP/src/index.html
@@ -8,8 +8,10 @@
 
 <body>
   <h1>Model-View-Presenter - Questions</h1>
-  <button type="button" onclick="requestShowQuestions()">Show me the questions bro</button>
-  <br><br>
+
+  <div class="btn-container">
+    <button class="btn" type="button" onclick="requestShowQuestions()"> Mostrar questões</button>
+  </div>
 
   <div id="demo"></div>
 
